; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_anal_tp.c_type_pos_hit.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_anal_tp.c_type_pos_hit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@R_REG_NAME_SP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"%d.mem.write\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i32, i32, i32, i8*)* @type_pos_hit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @type_pos_hit(%struct.TYPE_3__* %0, i32* %1, i32 %2, i32 %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  %17 = load i32, i32* %10, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %41

19:                                               ; preds = %6
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @R_REG_NAME_SP, align 4
  %24 = call i8* @r_reg_get_name(i32 %22, i32 %23)
  store i8* %24, i8** %14, align 8
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i8*, i8** %14, align 8
  %29 = call i64 @r_reg_getv(i32 %27, i8* %28)
  store i64 %29, i64* %15, align 8
  %30 = load i32*, i32** %9, align 8
  %31 = load i32, i32* %11, align 4
  %32 = call i32 @sdb_fmt(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %31)
  %33 = call i64 @sdb_num_get(i32* %30, i32 %32, i32 0)
  store i64 %33, i64* %16, align 8
  %34 = load i64, i64* %16, align 8
  %35 = load i64, i64* %15, align 8
  %36 = load i32, i32* %12, align 4
  %37 = sext i32 %36 to i64
  %38 = add nsw i64 %35, %37
  %39 = icmp eq i64 %34, %38
  %40 = zext i1 %39 to i32
  store i32 %40, i32* %7, align 4
  br label %45

41:                                               ; preds = %6
  %42 = load i32, i32* %11, align 4
  %43 = load i8*, i8** %13, align 8
  %44 = call i32 @SDB_CONTAINS(i32 %42, i8* %43)
  store i32 %44, i32* %7, align 4
  br label %45

45:                                               ; preds = %41, %19
  %46 = load i32, i32* %7, align 4
  ret i32 %46
}

declare dso_local i8* @r_reg_get_name(i32, i32) #1

declare dso_local i64 @r_reg_getv(i32, i8*) #1

declare dso_local i64 @sdb_num_get(i32*, i32, i32) #1

declare dso_local i32 @sdb_fmt(i8*, i32) #1

declare dso_local i32 @SDB_CONTAINS(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
